# MultiMediaSite

./: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_04_03_0957-60c6b8999cee_init.py
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_22_1119-89777f866889_init.py  2025_05_22_1230-3fc59bc2bb85_.py  2025_06_02_1724-ddabefe608d7_.py  2025_06_02_1742-9116f5c940ab_.py  2025_06_04_1214-8c7ddf40861b_.py
src/api/api_current/: index.py  users.py
src/api/api_current/orm/: users.py
src/api/v1/auth/: auth.py
src/api/v1/orm/: users.py
src/api/v1/utils/: render.py
src/core/: config.py
src/core/config/: auth_config.py  config.py  logger.py  models.py
src/core/dependencies/: auth_injection.py  db_helper.py
src/core/middleware/: middleware.py
src/core/models/: base.py  db_helper.py  users.py
src/core/schemas/: auth_schema.py  user.py  users.py
src/core/services/auth/: auth_manager.py
src/core/services/database/models/: __init__.py  base.py  media.py  session.py  users.py
src/core/services/database/orm/: session_orm.py  user_orm.py
src/frontend/menu/: urls.py
src/frontend/templates/: generic_response.html
src/frontend/templates/includes/: menu.html
src/frontend/templates/users/: login.html  profile.html  register.html
src/utils/: file_uploader.py
